[gd_scene load_steps=11 format=2]

[ext_resource path="res://splash.gd" type="Script" id=1]
[ext_resource path="res://new_dynamicfont.tres" type="DynamicFont" id=2]
[ext_resource path="res://pexels-anugrah-lohiya.jpg" type="Texture" id=3]
[ext_resource path="res://fonts/Sora/Sora-VariableFont_wght.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://splash.ogg" type="AudioStream" id=5]
[ext_resource path="res://acool-rocket-by-acool-rocket-a-hiroshi-nagai-reimagined-tran.jpg" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 30
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=4]
size = 59
font_data = ExtResource( 4 )

[node name="splash" type="Node2D"]
script = ExtResource( 1 )

[node name="single" type="Button" parent="."]
margin_left = 1409.24
margin_top = 303.647
margin_right = 1639.24
margin_bottom = 397.647
grow_horizontal = 0
grow_vertical = 0
hint_tooltip = "Single Player."
size_flags_horizontal = 15
size_flags_vertical = 15
custom_fonts/font = SubResource( 1 )
text = "Single User"
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="exit" type="Button" parent="."]
margin_left = 1661.45
margin_top = 904.511
margin_right = 1859.45
margin_bottom = 983.511
hint_tooltip = "Exit Game"
custom_fonts/font = ExtResource( 2 )
text = "Exit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="credits" type="Button" parent="."]
margin_left = 102.367
margin_top = 901.557
margin_right = 263.367
margin_bottom = 973.557
hint_tooltip = "Credits"
custom_fonts/font = ExtResource( 2 )
text = "Credits"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="multi" type="Button" parent="."]
margin_left = 1410.28
margin_top = 442.0
margin_right = 1640.28
margin_bottom = 529.0
hint_tooltip = "Multi Player"
custom_fonts/font = SubResource( 2 )
text = "Multi User"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="settings" type="Button" parent="."]
margin_left = 1406.24
margin_top = 562.433
margin_right = 1636.24
margin_bottom = 651.433
hint_tooltip = "Click to tweak graphics."
custom_fonts/font = ExtResource( 2 )
text = "Settings"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="version" type="Label" parent="."]
margin_left = 1712.0
margin_top = 1025.0
margin_right = 1872.0
margin_bottom = 1054.0
custom_fonts/font = ExtResource( 2 )
text = "Version : 1.3 alpha"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="."]
margin_left = 461.0
margin_top = 815.0
margin_right = 1585.0
margin_bottom = 980.0
custom_fonts/font = SubResource( 3 )
text = "
An easy to use Flight Sim made 
with the Godot Game Engine
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pexels-anugrah-lohiya" type="Sprite" parent="."]
visible = false
self_modulate = Color( 1, 1, 1, 0.407843 )
position = Vector2( 943.517, 545 )
scale = Vector2( 0.392055, 0.394369 )
z_index = -1
texture = ExtResource( 3 )

[node name="Label2" type="Label" parent="."]
margin_left = 578.293
margin_top = 108.708
margin_right = 1517.29
margin_bottom = 263.708
custom_fonts/font = SubResource( 4 )
text = "Flight Simulator
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 511.218, 157.418 )
stream = ExtResource( 5 )
volume_db = 15.0
autoplay = true

[node name="Sprite" type="Sprite" parent="."]
show_behind_parent = true
position = Vector2( 959.492, 538.179 )
scale = Vector2( 1.4662, 1.30921 )
texture = ExtResource( 6 )
[connection signal="pressed" from="single" to="." method="_on_single_pressed"]
[connection signal="pressed" from="exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="multi" to="." method="_on_multi_pressed"]
[connection signal="pressed" from="settings" to="." method="_on_settings_pressed"]
